Archive2/0b/c57a0e6997601e/output
main.cpp:11:1: error: expected ';' after class definition
 }
 ^
